--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
     align-items: center;
     height: 100vh;
   
-    background: linear-gradient(rgb(247, 61, 15), rgb(71, 150, 229));
+    /* background: linear-gradient(rgb(0, 249, 236), rgb(71, 150, 229)); */
+    background: linear-gradient(rgb(77, 36, 25), rgb(239, 241, 148));
   }
   
   #noButton {
@@ -51,8 +52,8 @@ body {
   }
   
   .btn {
-    background-color: #017cff;
-    color: white;
+    background-color: rgb(239, 241, 148);
+    color: rgb(6, 6, 6);
     font-weight: 600;
     padding: 15px 32px;
     text-align: center;
@@ -60,7 +61,7 @@ body {
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-    border: none;
+    border:#4b4b4b 2px solid;
     border-radius: 12px;
     transition: background-color 0.3s ease;
     box-shadow: 0 3px 3px black;
@@ -68,7 +69,7 @@ body {
   
   .btn:hover {
     background-color: #ffffff;
-    color: #017cff;
+    color: rgb(77, 36, 25);
   }
   
   .gif_container {
